fixed a bug with the ProductList not showing products on start.

--- a/frontend/src/components/ProductUpdate.css
+++ b/frontend/src/components/ProductUpdate.css
@@ -1,9 +1,9 @@
-.addProductCard {
+.productUpdate {
     padding: 0;
     margin: 5px;
 }
 
-.addProductCard div {
+.productUpdate div {
     vertical-align: middle;
     line-height: 100%;
     height: 30px;
@@ -14,18 +14,18 @@
     align-items: center;
 }
 
-.addProductCard label {
+.productUpdate label {
     width: 150px;
     display: flex;
     margin-left: 2px;
 }
 
-.addProductCard input {
+.productUpdate input {
     flex: 1;
     margin-right: 4px;
 }
 
-.addProductCard button {
+.productUpdate button {
     flex: 1;
     height: 100%;
 }
